hammenu spacing issue fixed

--- a/index.css
+++ b/index.css
@@ -119,7 +119,9 @@ nav .nav_links {
 .hammenu {
     display: none;
     flex-direction: column;
-    gap: 3px;
+}
+.hammenu > * + * {
+    margin-top: 0.15rem;
 }
 
 .hammenu:hover {
